--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
         min-height: 90vh;
         margin: 2ch;
         margin-top: 6ch;
-        width: 100%;
+        width: 90%;
       }
+      
       .text div {
         width: 100%;
       }
       .text p {
         color: gray;
         font-family: "Cormorant";
+        overflow-wrap: break-word;
         line-height: 1.5;
         font-size: 1.5rem;
         border-left: 0.2ch solid;
@@ -50,9 +52,9 @@
         min-width: 100vw;
         margin: 0;
         padding: 0;
-        box-shadow: inset 0 0 3ch hsla(var(--boxShadowColour), 0.5),
+        box-shadow: inset 0 0 2ch hsla(var(--boxShadowColour), 0.5),
           inset 0 0 0.5ch hsla(var(--boxShadowColour), 1),
-          inset 0 0 10ch hsla(var(--boxShadowColour), 0.2);
+          inset 0 0 5ch hsla(var(--boxShadowColour), 0.2);
       }
       textarea {
         min-height: 30ch;
@@ -77,6 +79,9 @@
         justify-content: center;
         outline: 1px solid black;
         transition: transform 1s ease;
+      }
+      .notify__div h1 {
+        text-align: center;
       }
       .notify__div {
         display: flex;
@@ -118,7 +123,7 @@
     </style>
     <div class="notify" id="notify">
       <div id="notifyContent" class="notify__div">
-        <h1>Pass the computer to player <span id="num">1</span></h1>
+        <h1>Pass the device to player <span id="num">1</span></h1>
         <button id="next" class="next">I'm here!</button>
       </div>
       <div id="endContent" class="notify__div end__div">
